--- a/index.html
+++ b/index.html
@@ -1,15 +1,193 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Welcome — My GitHub Pages Site</title>
+  <meta charset="UTF-8">
+  <meta-name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tubidy Music & Video Hub – Search, Stream, Download MP3/MP4</title>
+
+  <meta name="title" content="Tubidy Music & Video Hub – Search, Stream, Download MP3/MP4">
+  <meta name="description"
+    content="Tubidy is a simple online tool to search, play and download MP3 songs and MP4 videos for free. Fast speed, clean interface, and mobile-friendly experience.">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/196970695?v=4">
+
+  <!-- SEO -->
+  <meta name="robots" content="index, follow">
+  <link rel="alternate" href="https://tubidymp3downloader.github.io/" hreflang="en">
+
+  <!-- CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mimi+Peri&display=swap" rel="stylesheet">
+
+
+  <style>
+    body {
+      font-family: 'Mimi Peri';
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #dc3545;
+    }
+
+    .navbar-brand {
+      font-weight: 600;
+      color: #fff !important;
+    }
+
+    .nav-link {
+      color: #fff !important;
+      font-weight: 500;
+    }
+
+    .content img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin: 20px 0;
+    }
+
+    footer {
+      background-color: #f8f9fa;
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 40px;
+      border-top: 1px solid #dee2e6;
+    }
+
+    h1,
+    h2,
+    h3 {
+      margin-top: 1.5rem;
+    }
+
+    ol,
+    ul {
+      margin-left: 1.5rem;
+    }
+
+    .reference {
+      font-size: 0.9rem;
+      color: #6c757d;
+    }
+
+    .reference a {
+      color: #0d6efd;
+    }
+  </style>
 </head>
-<body style="font-family:Arial, sans-serif; max-width:800px; margin:40px auto;">
-  <h1>Hello — Welcome to my site!</h1>
-  <p>This is a simple GitHub Pages website. You can edit this content anytime from GitHub.</p>
-  <p>More pages: <a href="about.html">About</a></p>
-  <hr>
-  <p style="font-size:0.9em;color:#555">Built with GitHub Pages.</p>
+
+ <!-- Navigation -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark container">
+      <a class="navbar-brand" href="#">Tubidy – MP3 & MP4 Hub</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header><!-- Main Container -->
+  <section class="container py-5">
+
+    <h1 class="text-center">Tubidy – Fast MP3 & MP4 Download Tool</h1>
+    <img src="https://i.ibb.co/7yw9Mth/music-download.jpg" alt="Tubidy Music Downloader" class="hero-img">
+    <p class="text-muted text-center">Tubidy Music & Video Search Engine</p>
+
+    <!-- Intro -->
+    <h2>What is Tubidy?</h2>
+    <p>
+      Tubidy is an easy-to-use online platform that helps you search, play, and download your favorite MP3 songs and MP4 videos. It works directly in your browser, so you don’t need to install any app or create an account.
+    </p>
+
+    <h2>How Tubidy Works</h2>
+    <ol>
+      <li>Type the song name, artist, or video title in the search box.</li>
+      <li>Select from MP3 or MP4 formats based on what you want.</li>
+      <li>Click download and wait for the file to process.</li>
+      <li>Save the file on your mobile or computer.</li>
+    </ol>
+
+    <!-- Features -->
+    <h2 id="features">Key Features of Tubidy</h2>
+    <ul>
+      <li><strong>Fast Downloads:</strong> Save files without long waiting times.</li>
+      <li><strong>Multiple Formats:</strong> Choose MP3, MP4, and other supported formats.</li>
+      <li><strong>Mobile Friendly:</strong> Works smoothly on Android and iOS.</li>
+      <li><strong>No Signup:</strong> Start downloading instantly.</li>
+      <li><strong>Simple Interface:</strong> Clean and easy-to-use design.</li>
+      <li><strong>Free Forever:</strong> Unlimited conversions and downloads.</li>
+    </ul>
+
+    <h2>Is Tubidy Safe?</h2>
+    <p>
+      Tubidy is safe to use as long as you download only non-copyrighted content or files you are allowed to access. Avoid downloading copyrighted media without permission.
+    </p>
+
+    <h2>Benefits of Using Tubidy</h2>
+    <ul>
+      <li>Listen to music offline anytime.</li>
+      <li>Collect songs for travel or workouts.</li>
+      <li>Convert long videos into MP3 easily.</li>
+      <li>Useful for music lovers, students, and travelers.</li>
+    </ul>
+
+    <h2>Conclusion</h2>
+    <p>
+      Tubidy is one of the easiest platforms for free MP3 and MP4 downloads. With fast speed, a simple layout, and wide format support, it’s the perfect tool for anyone who loves music and videos—just use it responsibly.
+    </p>
+
+  </section>
+
+ <!-- Footer -->
+  <footer>
+    <p>&copy; <script>document.write(new Date().getFullYear())</script> Tubidy MP3 & MP4 Downloader</p>
+  </footer>
+
+  <!-- JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Website",
+  "name": "Tubidy MP3 & MP4 Downloader",
+  "url": "https://tubidymp3downloader.github.io/",
+  "description": "Tubidy is a free online tool to search, play, and download MP3 songs and MP4 videos quickly. Simple, fast, and mobile-friendly.",
+  "inLanguage": "en",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Tubidy Hub",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://avatars.githubusercontent.com/u/196970695?v=4"
+    }
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://tubidymp3downloader.github.io/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  },
+  "sameAs": [
+    "https://tubidymp3downloader.github.io/"
+  ]
+}
+</script>
+
+
 </body>
+
 </html>
+
+
+
+
