--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <section class="container py-5">
 
     <h1 class="text-center">Tubidy – Fast MP3 & MP4 Download Tool</h1>
-    <img src="https://i.ibb.co/7yw9Mth/music-download.jpg" alt="Tubidy Music Downloader" class="hero-img">
+    <img src="https://ibb.co/dsdh2CY3" alt="Tubidy Music Downloader" class="hero-img">
     <p class="text-muted text-center">Tubidy Music & Video Search Engine</p>
 
     <!-- Intro -->
