--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       font-family: 'Mimi Peri';
       line-height: 1.6;
     }
+    .hero-img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+}
 
     header {
       background-color: #0284c7;
