--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/x-icon" href="https://tubidymp3downloader.github.io/favicon.ico">
 
   <!-- SEO -->
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="noindex, nofollow">
   <link rel="alternate" href="https://tubidymp3downloader.github.io/" hreflang="en">
 
   <!-- CSS -->
