--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
       line-height: 1.6;
     }
     .hero-img {
-    width: 300px !important;   /* change size as needed */
-    max-width: 100%;
+    max-width: 500px;    /* maximum size on desktop */
+    width: 100%;         /* full width on mobile */
     height: auto;
     display: block;
     margin: 20px auto;
+    border-radius: 10px;
 }
 
     header {
