--- a/index.html
+++ b/index.html
@@ -115,34 +115,30 @@
 
     <!-- Intro -->
     <h2>What is Tubidy?</h2>
-    <p>
-      Tubidy is an easy-to-use online platform that helps you search, play, and download your favorite MP3 songs and MP4 videos. It works directly in your browser, so you don’t need to install any app or create an account.
-    </p>
-
+    <p>Tubidy is a <a href="https://vimeo.com/ondemand/thetalent">popular online platform</a> that allows users to search, stream, and download a wide range of music and <a href="https://wellfound.com/u/tubidy-ke">videos</a>. It works as a mobile-friendly search engine that pulls media files from various sources across the internet and organizes them into downloadable formats. Whether you are looking for <a href="https://legacystories.org/storyboard/entry/tubidy-mp3-downloader-everything-you-need-to-know-in-2025">MP3 songs</a>, MP4 videos, movie clips, ringtones, or trending tracks, Tubidy offers <a href="https://sites.google.com/view/tubidy-mp3-downloader/home?read_current=1">quick access</a> without requiring any registration or app installation. Its lightweight design and simple interface make it especially popular among <a href="https://differ.blog/p/how-tubidy-became-the-go-to-platform-for-free-music-lovers-47e20d">smartphone users</a> who want fast downloads without consuming too much data.</p>
+    
     <h2>How Tubidy Works</h2>
     <ol>
-      <li>Type the song name, artist, or video title in the search box.</li>
+      <li>Type the song name, artist, or <a href="https://flipboard.com/@jameswill8520/">video</a> title in the search box.</li>
       <li>Select from MP3 or MP4 formats based on what you want.</li>
-      <li>Click download and wait for the file to process.</li>
+      <li>Click <a href="https://500px.com/p/tubidy_ke">download</a> and wait for the file to process.</li>
       <li>Save the file on your mobile or computer.</li>
     </ol>
 
     <!-- Features -->
     <h2 id="features">Key Features of Tubidy</h2>
     <ul>
-      <li><strong>Fast Downloads:</strong> Save files without long waiting times.</li>
-      <li><strong>Multiple Formats:</strong> Choose MP3, MP4, and other supported formats.</li>
-      <li><strong>Mobile Friendly:</strong> Works smoothly on Android and iOS.</li>
-      <li><strong>No Signup:</strong> Start downloading instantly.</li>
-      <li><strong>Simple Interface:</strong> Clean and easy-to-use design.</li>
-      <li><strong>Free Forever:</strong> Unlimited conversions and downloads.</li>
+      <li><strong>Fast Downloads:</strong> The platform is <a href="https://www.claimajob.com/profiles/7557586-james-will">extremely optimized</a> for mobile devices, offering fast loading speeds, minimal ads, and an easy browsing experience. It works smoothly even on older smartphones.</li>
+      <li><strong>Multiple Formats:</strong> Tubidy supports various file formats such as MP3, MP4, 3GP, and <a href="https://fyers.in/community/member/BI9JDpZNIH">WEBM</a>. This helps users choose the best format based on their device storage and internet speed.</li>
+      <li><strong>Mobile Friendly:</strong> The platform is extremely optimized for mobile devices, offering fast loading speeds, minimal ads, and an easy <a href="https://marketplace.trinidadweddings.com/author/jameswill8520/">browsing experience</a>. It works smoothly even on older smartphones.</li>
+      <li><strong>No Signup:</strong> Users do not need to sign up or log in. Tubidy provides direct access to <a href="https://tripatini.com/profiles/blogs/tubidy-for-beginners-step-by-step-guide-to-download-hd-videos">content</a>, making it simple and hassle-free.</li>
+      <li><strong>Free Forever:</strong> One of Tubidy’s biggest advantages is that it offers completely <a href="https://buzzakoo.com/blogs/74464/Best-Tubidy-Alternatives-for-Free-Music-and-Video-Downloads">free downloads</a>. Users can download trending songs, classic hits, podcasts, remixes, and videos without paying any subscription charges.</li>
     </ul>
 
     <h2>Is Tubidy Safe?</h2>
-    <p>
-      Tubidy is safe to use as long as you download only non-copyrighted content or files you are allowed to access. Avoid downloading copyrighted media without permission.
-    </p>
-
+    <p>Tubidy itself acts as a <a href="https://forum.motoshkola.od.ua/threads/how-to-use-tubidy-for-mp3-and-video-downloads.88992/">search engine</a> and does not host copyrighted media. However, since it pulls files from external sources, users must be cautious about the type of content they download. Downloading copyrighted songs or videos without permission may violate <a href="https://layerzone.com/blogs/12352/Your-Beginner-s-Guide-to-Tubidy-Music-and-Videos">copyright laws</a> in many countries.</p>
+    <p>In terms of safety, Tubidy is generally safe to use, but users should be aware of ads or pop-ups on the site. Using an <a href="https://audiomack.com/jameswill8520">updated browser</a>, ad-blocker, and antivirus can help avoid unwanted risks. It’s always recommended not to click unknown links or suspicious <a href="https://protospielsouth.com/user/97497">ads while browsing platforms</a> like Tubidy.</p>
+    
     <h2>Benefits of Using Tubidy</h2>
     <ul>
       <li>Listen to music offline anytime.</li>
@@ -152,9 +148,7 @@
     </ul>
 
     <h2>Conclusion</h2>
-    <p>
-      Tubidy is one of the easiest platforms for free MP3 and MP4 downloads. With fast speed, a simple layout, and wide format support, it’s the perfect tool for anyone who loves music and videos—just use it responsibly.
-    </p>
+    <p>Tubidy is a convenient and user-friendly platform for downloading and <a href="https://weeblyblog.com/tubidy-the-secret-to-4k-video-downloads-revealed/">streaming music</a> and videos in various formats. Its free access, fast performance, and mobile-friendly design make it highly appealing to users around the world. However, users must be careful about downloading <a href="https://www.vibenest.info/user-post/how-to-save-youtube-videos-easily-on-any-device-using-yt1s">copyrighted content and ensure safe browsing practices</a>. Overall, Tubidy is a great choice for those who want fast, simple, and hassle-free access to media files without needing an app.</p>
 
   </section>
 
